// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffs array values in object properties 1`] = `
"  <Foo
    object={
      Object {
        baz: Array [
-         'thud',
+         'qux',
        ],
      }
    }
  />"
`;

exports[`diffs array values in object properties in children 1`] = `
"  <Foo>
    <Bar
      object={
        Object {
          baz: Array [
-           'thud',
+           'qux',
          ],
        }
      }
    />
  </Foo>"
`;

exports[`diffs both have properties and children, different names 1`] = `
"- <Foo
-   foo=\\"bar\\"
+ <Qux
+   baz=\\"thud\\"
  >
-   <Bar />
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs both have properties and children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
+   baz=\\"thud\\"
  >
-   <Bar />
+   <Baz />
  </Foo>"
`;

exports[`diffs both have properties, first has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
- </Foo>
+   baz=\\"thud\\"
+ />"
`;

exports[`diffs both have properties, neither has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
+   baz=\\"thud\\"
  />"
`;

exports[`diffs both have properties, second has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
- />
+   baz=\\"thud\\"
+ >
+   <Baz />
+ </Foo>"
`;

exports[`diffs first has properties, both have children, different names 1`] = `
"- <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
+ <Qux>
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs first has properties, both have children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
+ <Foo>
+   <Baz />
  </Foo>"
`;

exports[`diffs first has properties, first has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
-   <Bar />
- </Foo>
+ <Foo />"
`;

exports[`diffs first has properties, neither has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
+ <Foo />"
`;

exports[`diffs first has properties, second has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
+ <Foo>
+   <Baz />
+ </Foo>"
`;

exports[`diffs max depth 1`] = `
"  <div>
    <div>
      <div>…</div>
      <div…>…</div>
      <br… />
      <br />
      <section>
        <div>
-         Foo
+         Bar
        </div>
      </section>
    </div>
  </div>"
`;

exports[`diffs multiline string properties 1`] = `
"  <Foo
    multiline={
      \`foo␊
-     bar\`
+     baz\`
    }
  />"
`;

exports[`diffs neither have properties, both have children, different names 1`] = `
"- <Foo>
-   <Bar />
+ <Qux>
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs neither have properties, both have children, same name 1`] = `
"  <Foo>
-   <Bar />
+   <Baz />
  </Foo>"
`;

exports[`diffs neither have properties, first has children, same name 1`] = `
"- <Foo>
-   <Bar />
- </Foo>
+ <Foo />"
`;

exports[`diffs neither have properties, neither has children, same name 1`] = `"  <Foo />"`;

exports[`diffs neither have properties, second has children, same name 1`] = `
"- <Foo />
+ <Foo>
+   <Baz />
+ </Foo>"
`;

exports[`diffs object properties 1`] = `
"  <Foo
    object={
      Object {
-       baz: 'thud',
+       baz: 'qux',
      }
    }
  />"
`;

exports[`diffs property differences between react elements 1`] = `
"  <HelloMessage⍟
-   name=\\"John\\"
+   name=\\"Olivia\\"
  />"
`;

exports[`diffs react elements 1`] = `
"- <strong>
+ <em>
    arm
- </strong>
+ </em>"
`;

exports[`diffs rendered array values in object properties 1`] = `
"  <Foo
    object={
      Object {
        baz: Array [
-         'thud',
+         'qux',
        ],
      }
    }
  />"
`;

exports[`diffs rendered array values in object properties in children 1`] = `
"  <Foo>
    <Bar
      object={
        Object {
          baz: Array [
-           'thud',
+           'qux',
          ],
        }
      }
    />
  </Foo>"
`;

exports[`diffs rendered both have properties and children, different names 1`] = `
"- <Foo
-   foo=\\"bar\\"
+ <Qux
+   baz=\\"thud\\"
  >
-   <Bar />
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs rendered both have properties and children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
+   baz=\\"thud\\"
  >
-   <Bar />
+   <Baz />
  </Foo>"
`;

exports[`diffs rendered both have properties, first has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
- </Foo>
+   baz=\\"thud\\"
+ />"
`;

exports[`diffs rendered both have properties, neither has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
+   baz=\\"thud\\"
  />"
`;

exports[`diffs rendered both have properties, second has children, same name 1`] = `
"  <Foo
-   foo=\\"bar\\"
- />
+   baz=\\"thud\\"
+ >
+   <Baz />
+ </Foo>"
`;

exports[`diffs rendered first has properties, both have children, different names 1`] = `
"- <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
+ <Qux>
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs rendered first has properties, both have children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- >
-   <Bar />
+ <Foo>
+   <Baz />
  </Foo>"
`;

exports[`diffs rendered first has properties, first has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
-   <Bar />
- </Foo>
+ <Foo />"
`;

exports[`diffs rendered first has properties, neither has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
+ <Foo />"
`;

exports[`diffs rendered first has properties, second has children, same name 1`] = `
"- <Foo
-   foo=\\"bar\\"
- />
+ <Foo>
+   <Baz />
+ </Foo>"
`;

exports[`diffs rendered max depth 1`] = `
"  <div>
    <div>
      <div>…</div>
      <div…>…</div>
      <br… />
      <br />
      <section>
        <div>
-         Foo
+         Bar
        </div>
      </section>
    </div>
  </div>"
`;

exports[`diffs rendered multiline string properties 1`] = `
"  <Foo
    multiline={
      \`foo␊
-     bar\`
+     baz\`
    }
  />"
`;

exports[`diffs rendered neither have properties, both have children, different names 1`] = `
"- <Foo>
-   <Bar />
+ <Qux>
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs rendered neither have properties, both have children, same name 1`] = `
"  <Foo>
-   <Bar />
+   <Baz />
  </Foo>"
`;

exports[`diffs rendered neither have properties, first has children, same name 1`] = `
"- <Foo>
-   <Bar />
- </Foo>
+ <Foo />"
`;

exports[`diffs rendered neither have properties, neither has children, same name 1`] = `"  <Foo />"`;

exports[`diffs rendered neither have properties, second has children, same name 1`] = `
"- <Foo />
+ <Foo>
+   <Baz />
+ </Foo>"
`;

exports[`diffs rendered object properties 1`] = `
"  <Foo
    object={
      Object {
-       baz: 'thud',
+       baz: 'qux',
      }
    }
  />"
`;

exports[`diffs rendered property differences between react elements 1`] = `
"  <div>
    Hello 
    <mark>
-     John
+     Olivia
    </mark>
  </div>"
`;

exports[`diffs rendered react elements 1`] = `
"- <strong>
+ <em>
    arm
- </strong>
+ </em>"
`;

exports[`diffs rendered second has properties, both have children, different names 1`] = `
"- <Foo>
-   <Bar />
+ <Qux
+   baz=\\"thud\\"
+ >
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs rendered second has properties, both have children, same name 1`] = `
"- <Foo>
-   <Bar />
+ <Foo
+   baz=\\"thud\\"
+ >
+   <Baz />
  </Foo>"
`;

exports[`diffs rendered second has properties, first has children, same name 1`] = `
"- <Foo>
-   <Bar />
- </Foo>
+ <Foo
+   baz=\\"thud\\"
+ />"
`;

exports[`diffs rendered second has properties, neither has children, same name 1`] = `
"- <Foo />
+ <Foo
+   baz=\\"thud\\"
+  />"
`;

exports[`diffs rendered second has properties, second has children, same name 1`] = `
"- <Foo />
+ <Foo
+   baz=\\"thud\\"
+ >
+   <Baz />
+ </Foo>"
`;

exports[`diffs rendered string and number children 1`] = `
"  <div>
-   foo
+   foo bar
-   bar
-   {42}
+   {39}
  </div>"
`;

exports[`diffs second has properties, both have children, different names 1`] = `
"- <Foo>
-   <Bar />
+ <Qux
+   baz=\\"thud\\"
+ >
+   <Baz />
- </Foo>
+ </Qux>"
`;

exports[`diffs second has properties, both have children, same name 1`] = `
"- <Foo>
-   <Bar />
+ <Foo
+   baz=\\"thud\\"
+ >
+   <Baz />
  </Foo>"
`;

exports[`diffs second has properties, first has children, same name 1`] = `
"- <Foo>
-   <Bar />
- </Foo>
+ <Foo
+   baz=\\"thud\\"
+ />"
`;

exports[`diffs second has properties, neither has children, same name 1`] = `
"- <Foo />
+ <Foo
+   baz=\\"thud\\"
+  />"
`;

exports[`diffs second has properties, second has children, same name 1`] = `
"- <Foo />
+ <Foo
+   baz=\\"thud\\"
+ >
+   <Baz />
+ </Foo>"
`;

exports[`diffs string and number children 1`] = `
"  <div>
-   foo
+   foo bar
-   bar
-   {42}
+   {39}
  </div>"
`;

exports[`same name, different component function 1`] = `
"- <HelloMessage⍟
+ <HelloMessage⍟
    name=\\"John\\"
  />"
`;
